login sections login and img

--- a/Login.html
+++ b/Login.html
@@ -16,29 +16,41 @@
 </head>
 
 <body>
-    <section>
-        <div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <section class="container">
+                    <div>
+                        <img class="img-fluid w-20" src="img/T.png" alt="">
+                        <h1 class="red">login</h1>
 
+                    </div>
+
+                    <div>
+                        <form class="w-50 mx-auto mt-5">
+                            <div class="form-group">
+                                <label for="email">Correo electrónico:</label>
+                                <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo electrónico">
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Contraseña:</label>
+                                <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña">
+                            </div>
+                            <button type="submit" class="btn btn-primary">Iniciar sesión</button>
+                        </form>
+                    </div>
+
+                </section>
+            </div>
+            
+            <div class="col-md-6">
+                <section class="pt-3">
+                    <img src="img/pexels-skylar-kang-6045248.jpg" class="img-fluid" alt="image desc">    
+                </section>
+            </div>
         </div>
-
-        <div>
-             <form class="w-50 mx-auto mt-5">
-                <div class="form-group">
-                    <label for="email">Correo electrónico:</label>
-                    <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo electrónico">
-                </div>
-                <div class="form-group">
-                    <label for="password">Contraseña:</label>
-                    <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña">
-                </div>
-                <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-            </form>
-        </div>
-
-    </section>
-    <section>
-        <img src="" alt="">
-    </section>
+    </div>
+    
 
 
 </body>
