--- a/Login.html
+++ b/Login.html
@@ -24,7 +24,7 @@
                 <div class="container-fluid pt-3">
                     <div class="d-flex logo">
                         <img class="img-fluid mx-3" src="img/T.png" alt="">
-                        <h1 class="red">Protela Text</h1>
+                        <h1 class="red">QualityTex</h1>
 
                     </div>
 
@@ -43,14 +43,14 @@
                     </div>
 
                     <div class="mt-3">
-                        <form class="w-auto mx-auto">
+                        <form class="w-auto mx-auto" action="Home.html">
                             <div class="form-group ">
                                 <label for="email">Correo electrónico:</label>
-                                <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo electrónico">
+                                <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo electrónico" required>
                             </div>
                             <div class="form-group">
                                 <label for="password">Contraseña:</label>
-                                <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña">
+                                <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña" required>
                             </div>
                             <div class="text-center">
                                   <button type="submit" class="btn btn-primary mt-3 ">Iniciar sesión</button>
