--- a/Home.html
+++ b/Home.html
@@ -40,9 +40,7 @@
             </div>
         </div>
 
-        
-
-        <section class="d-flex text-center justify-content-center oper ">
+        <section class="d-flex text-center justify-content-center oper">
 
             <div class="mx-4 mt-4 open-popup "data-popup-target="popup-1">
                 <p>Crear nuevo registro de Tela</p>
@@ -73,6 +71,16 @@
             <form>
                 <div class="form-group">
                     <label for="dimensiones">Dimensiones:</label>
+                    <input type="text" id="dimensiones" name="dimensiones" placeholder="Ingrese las dimensiones de la tela" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="Sistema 4 puntos">Dimensiones:</label>
+                    <input type="text" id="dimensiones" name="dimensiones" placeholder="Ingrese las dimensiones de la tela" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="Escala grises">Dimensiones:</label>
                     <input type="text" id="dimensiones" name="dimensiones" placeholder="Ingrese las dimensiones de la tela" required>
                 </div>
                 
