modificacion agregacion columnas

--- a/Est-datos/Datos.html
+++ b/Est-datos/Datos.html
@@ -11,6 +11,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
+            background-color: #ffe414;
         }
         
         h1 {
@@ -69,23 +70,50 @@
         <thead>
             <tr>
                 <th>ID</th>
-                <th>Nombre</th>
-                <th>Edad</th>
-                <th>Correo electrónico</th>
+                <th>Ancho</th>
+                <th>Alto</th>
+                <th>Color</th>
+                <th>Gramaje</th>
+                <th>Pilling</th>
+                <th>Grises</th>
+                <th>4 puntos</th>
+                <th>proveeddor</th>
+                <th>Fecha</th>
+                <th>peso</th>
+                <th>rollo</th>
+                <th>tipo tela</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>1</td>
-                <td>John Doe</td>
+                <td>32cm</td>
+                <td>33 cm</td>
+                <td>rojo</td>
+                <td>4.6</td>
                 <td>30</td>
-                <td>john.doe@example.com</td>
+                <td>3</td>
+                <td>2</td>
+                <td>NovaText</td>
+                <td>12/03/2019</td>
+                <td>2.4 kg</td>
+                <td>324-333-432</td>
+                <td>Seda</td>
             </tr>
             <tr>
                 <td>2</td>
-                <td>Jane Smith</td>
-                <td>25</td>
-                <td>jane.smith@example.com</td>
+                <td>31 cm</td>
+                <td>25 cm</td>
+                <td>azul</td>
+                <td>3.4</td>
+                <td>20</td>
+                <td>5</td>
+                <td>2</td>
+                <td>TelasMundo</td>
+                <td>22/03/2023</td>
+                <td>3.3 kg</td>
+                <td>546-653-677</td>
+                <td>Nailon </td>
             </tr>
             <!-- Agrega más filas de datos aquí -->
         </tbody>
