--- a/Est-datos/Datos.html
+++ b/Est-datos/Datos.html
@@ -11,11 +11,12 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #ffe414;
+            background-color: #7b8cb5;
         }
         
         h1 {
             text-align: center;
+            color: rgb(255, 255, 255);
         }
         
         .search-bar {
@@ -118,7 +119,6 @@
             <!-- Agrega más filas de datos aquí -->
         </tbody>
     </table>
-
     <script>
         const searchInput = document.getElementById('search-input');
         const table = document.getElementById('data-table');
