--- a/Login.html
+++ b/Login.html
@@ -43,7 +43,7 @@
                     </div>
 
                     <div class="mt-3">
-                        <form class="w-auto mx-auto" action="Home.html">
+                        <form class="w-auto mx-auto" action="/SingUp.html">
                             <div class="form-group ">
                                 <label for="email">Correo electrónico:</label>
                                 <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo electrónico" required>
